--- a/index.html
+++ b/index.html
@@ -27,4 +27,12 @@
 }</style>
 <link rel="shortcut icon" type="image/png" href="https://cdn.discordapp.com/attachments/418850379518705675/643213114749485056/unknown.png" />
 <title>Stinky Rightwinger Factsheet | Socialism Done Left</title>
-</head><body>temp</body>
+</head><body><h1>Click These to Leave</h1>
+<ul>
+<li><a href="https://socdoneleft.github.io/stinky_rightwinger_factsheet.html">Factsheet</a></li>
+<li><a href="https://discord.gg/ZeMdbPC">Discord</a></li>
+<li><a href="https://twitter.com/SocDoneLeft">Twitter</a></li>
+<li><a href="https://www.youtube.com/channel/UC0n24lonL5RMpzmCiCzIkIw">YouTube</a></li>
+<li><a href="https://www.patreon.com/socdoneleft">Patreon</a></li>
+<li><a href="https://steamcommunity.com/id/socdoneleft">Steam</a></li>
+</ul></body>
